# BuildLIb

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/heima/buildlib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/one/: CMakeLists.txt
app/src/main/cpp/one/src/: one.c
app/src/main/cpp/two/: CMakeLists.txt
app/src/main/cpp/two/src/: two.c
app/src/main/java/com/heima/buildlib/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/heima/buildlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
